// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OIbLink check OIbIpAddress inline 1`] = `
<div>
  <div
    class="form-group"
    style="margin-bottom: 0px; display: inline-block;"
  >
    <input
      aria-invalid="false"
      class="oi-form-input form-control"
      id="name"
      name="name"
      type="text"
      value="127.0.0.1"
    />
    <div
      class="invalid-feedback"
    />
  </div>
</div>
`;

exports[`OIbLink check OIbIpAddress with invalide value 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
    >
      label
    </label>
    <input
      aria-invalid="true"
      class="oi-form-input is-invalid form-control"
      id="name"
      name="name"
      type="text"
      value="no ip address"
    />
    <div
      class="invalid-feedback"
    >
      Value should be a valid ip
    </div>
  </div>
</div>
`;

exports[`OIbLink check OIbLink with value="127.0.0.1" 1`] = `
<div>
  <div
    class="form-group"
  >
    <label
      class=""
      for="name"
    >
      label
    </label>
    <input
      aria-invalid="false"
      class="oi-form-input form-control"
      id="name"
      name="name"
      type="text"
      value="127.0.0.1"
    />
    <div
      class="invalid-feedback"
    />
  </div>
</div>
`;
